--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -219,7 +223,8 @@
         <section class="contact-section">
             <div class="contact-section--form">
 
-                <form action="https://formspree.io/acushla4real@gmail.com" method="POST">
+                <!-- <form action="https://formspree.io/acushla4real@gmail.com" method="POST"> -->
+                    <form action="process-form.php" method="POST">
 
                     <div class="u-margin-bottom-medium">
                         <h2 class="heading-primary">
